--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
         <footer>
           <div class="footer-body">
             <ul class="f-xl fw-900">
-              <li>首頁</li>
-              <li>定價</li>
+              <li><a href="#">首頁</a></li>
+              <li><a href="#">定價</a></li>
             </ul>
             <a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023web-camp/logo.png?raw=true" alt="logo"></a>
           </div>
